Converted to extension.

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,8 @@
 }
 html, body {
     margin: 0 auto;
-    height: 100%;
+    width: 400px;
+    height: 600px;
     background: linear-gradient(180deg, #455A64 60%, #607D8B 100%) no-repeat #455A64;
     overflow-y: visible;
     color: #FFFFFF;
